--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -1,7 +1,9 @@
 $accent: #fe3e57;
 $defauld: #8d8d8d;
 $title: #29282d;
+$bg: #f6f6f6;
 %quicksand-300{
+
    font-family: 'Quicksand-Light', sans-serif;
    font-weight: 300;
 }
