--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -58,4 +58,104 @@
   }
 }
 
+.footer{
+  background-color: $bg;
+}
+.footer-top{
+padding: 70px 0 40px;
+border-bottom: 1px solid #ececec;
+display: flex;
+&__contact{
+  width: 270px;
+  margin-right: 50px;
+}
+&__nav{
+  width: 170px;
+  margin-right: 30px;
+}
+&__item-form{
+  max-width: 470px;
+  
+}
+&__logo{
+  margin-bottom: 33px;
+  display: block;
+}
+&__title{
+  margin-bottom: 40px;
+  @extend %roboto-400;
+  color: $title;
+  font-size: 22px;
+  line-height: 1;
+}
+&__link{
+margin-bottom: 14px;
+display: block;
+}
+&__text{
+  margin-bottom: 25px;
+}
+&__adress,
+&__email,
+&__phone{
+margin-bottom: 14px;
+display: block;
+}
+&__social-list{
+  display: flex;
+  align-items: center; 
+  margin-top: 30px;
+}
+&__social-item + .footer-top__social-item{
+  padding-left: 18px;
 
+}
+&__social-link{
+  transition: all .3s;
+path{
+
+  fill: $defauld;
+}
+&:hover{
+  path{
+    fill: $accent;
+  }
+}
+}
+&__form-input{
+background-color: #fff;
+max-width: 320px;
+width: 100%;
+border: none;
+ box-shadow: 0px 7px 20px 0px rgba(192, 192, 192, 0.3);
+padding: 12px 10px 12px 15px;
+&::placeholder{
+  color: $defauld;
+  font-size: 16px;
+
+}
+}
+&__form-btn{
+  border: none;
+  background-color: $accent;
+  color: #fff;
+  text-transform: uppercase;
+  padding: 12px 21px;
+  box-shadow: 0px 7px 20px 0px rgba(255, 17, 48, 0.3);
+cursor: pointer;
+}
+
+
+}
+.footer-bottom{
+  height: 75px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-size: 12px;
+  &__accept-img{
+    margin-left: 25px;
+    vertical-align: middle;
+display: inline-block;
+  }
+}
