--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -2,13 +2,22 @@ $accent: #fe3e57;
 $defauld: #8d8d8d;
 $title: #29282d;
 $bg: #f6f6f6;
+%btn{
+  padding: 14px 35px;
+  text-transform: uppercase;
+  color: #fff;
+  @extend %roboto-400; 
+  box-shadow: 0px 7px 20px 0px rgba(255, 17, 48, 0.3);
+  padding: 12px 26px;
+  background-color: $accent;
+}
 %quicksand-300{
 
    font-family: 'Quicksand-Light', sans-serif;
    font-weight: 300;
 }
 %quicksand-400{
-   font-family: 'Quicksand-Regular', sans-serif;
+   font-family: 'Quicksand-Regular',sans-serif;
    font-weight: 400;
 }
 %quicksand-500{
