--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -2,13 +2,14 @@
 @import 'fonts';
 @import 'global';
 @import 'reset';
+@import 'libs';
 @import 'media';
 .header{
   padding: 40px 0;
   &__inner{
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    
   }
 }
 .menu{
@@ -20,13 +21,13 @@
   }
   &__list-link{
     color: $title;
-    padding-bottom: 1px;
-    transition: all .3s;
-    @extend %quicksand-400;
+    padding-bottom:0 2px 1px;
+    transition: color .3s;
+    @extend %roboto-400;
     &:hover{
       color: $accent;
       border-bottom: 1px solid $accent;
-     @extend %quicksand-500;
+     @extend %roboto-700;
     }
   }
   &__list--link-active{
@@ -82,7 +83,7 @@ display: flex;
   display: block;
 }
 &__title{
-  margin-bottom: 40px;
+  
   @extend %roboto-400;
   color: $title;
   font-size: 22px;
@@ -136,13 +137,10 @@ padding: 12px 10px 12px 15px;
 }
 }
 &__form-btn{
-  border: none;
-  background-color: $accent;
-  color: #fff;
-  text-transform: uppercase;
-  padding: 12px 21px;
-  box-shadow: 0px 7px 20px 0px rgba(255, 17, 48, 0.3);
-cursor: pointer;
+  
+  
+  cursor: pointer;
+  @extend %btn;
 }
 
 
@@ -157,5 +155,81 @@ cursor: pointer;
     margin-left: 25px;
     vertical-align: middle;
 display: inline-block;
+  }
+}
+
+.top-slider{
+  background-image: url('../images/top-slider-bg.png');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-color: $bg;
+  padding: 65px 0 45px;
+  &__container{
+    max-width: 1560px;
+  }
+  &__content{
+    padding-left: 156px;
+    padding-top: 125px;
+  }
+  &__item{
+    display: flex !important;
+    justify-content: space-between;
+  }
+  &__title{
+    display: flex;
+    max-width: 670px;
+    font-size: 58px;
+    line-height: 68px;
+    color: $title;
+    @extend %roboto-700;
+    margin-bottom: 35px;
+  }
+  &__text{
+    max-width: 470px;
+    margin-bottom: 55px;
+  }
+  &__link{
+   @extend %btn; 
+  padding: 14px 36px;
+  }
+  .slick-dots{
+    display: flex;
+    justify-content: center;
+    margin-top: -70px;
+    li{
+      padding: 0 5px;
+      line-height: 0;
+      button{
+      padding: 0;
+      font-size: 0;
+      background-color: transparent;
+      width: 26px;
+      height: 26px;
+      border-radius:  50%;
+      border: 1px solid transparent;
+      position: relative;
+      &::before{
+        position: absolute;
+        content: '';
+        width: 6px;
+        height: 6px;
+        border-radius: 50%;
+        background-color: $defauld;
+        top: 50%;
+        left: 50%;
+
+        transform: translate(-50%, -50%);
+      }
+      }
+      &.slick-active{
+        button{
+           border-color: $accent;
+           &::before{
+             background-color: $accent;
+           }
+        }
+  
+      }
+    }
   }
 }
