--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -36,7 +36,14 @@ $bg: #f6f6f6;
   font-family: 'Roboto-Bold', sans-serif;
   font-weight: 700;
 }
-
+%checkbox-hidden,
+%radio-hidden{
+   width: 1px;
+    height: 1px;
+    overflow: hidden; 
+    clip: rect(0 0 0 0);
+    position: absolute;
+}
 @function max($numbers...){
   @return m#{a}x(#{$numbers});
 }
