--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -537,7 +537,7 @@ right: 70px;
      margin-left: auto;
   }
   &__subtitle{
-    color: $accent;
+     color: $accent;
     text-transform: uppercase;
     margin-bottom: 10px;
     font-size: 22px;
@@ -763,4 +763,523 @@ box-shadow: 0px 5px 25px 0px rgba(254, 62, 87, 0.35);
   @extend %roboto-400;
   }
 }
+.shop{
+  padding: 120px 0 105px;
+  &__inner{
+    display: flex;
+    
+    
+  }
+  &__filters{
+    width: 370px;
+    margin-right: 30px;
+  }
+}
+.filter{
+  &__item{
+  padding: 35px 30px 40px;
+  border: 1px solid #ececec;
+  margin-bottom: 40px;
+  width: 370px;
+  }
+  &__title{
+    text-transform: uppercase;
+    color: $title;
+    font-size: 22px;
+    @extend %roboto-400;
+    margin-bottom: 25px;
+
+  }
+}
+.filter-search{
+  &__form{
+    display: flex;
+  }
+  &__input{
+    border: none;
+    background-color: $bg;
+    height: 50px;
+    width: 260px;
+    padding: 0 5px 0 15px;
+  }
+  &__btn{
+     border: none;
+     background-color: $accent;
+     height: 50px;
+     width: 50px;
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     cursor: pointer;
+  }
+}
+.filter-price{
+  &__label{
+    padding-top: 30px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
   
+  }  
+  
+  &__btn{
+    @extend %btn;
+    border: none;
+    cursor: pointer; 
+  }
+}
+.irs--flat .irs-line {
+  top: 13px;
+  height: 5px;
+  background-color: #ececec;
+  border-radius: 0;
+}
+
+.irs--flat .irs-handle {
+  top: 0px;
+  width: 30px;
+  height: 30px;
+  background-color: #fff;
+  box-shadow: 0px 0px 13px 0px rgba(90, 90, 90, 0.2);
+
+}
+.irs--flat .irs-handle>i:first-child{
+  display: none;
+}
+.irs--flat .irs-bar {
+  top: 13px;
+  height: 5px;
+  background-color: $accent;
+}
+
+.irs-from, .irs-to, .irs-single{
+display: none;
+}
+.irs--flat .irs-min, .irs--flat .irs-max{
+ display: none;
+}
+.irs--flat{
+  height: 30px;
+}
+.filter-color{
+  &__label{
+    padding-bottom: 20px;
+    border-bottom: 1px solid #ececec;
+    display: flex;
+    justify-content: space-between;
+    & + .filter-color__label{
+      padding-top: 20px;
+    }
+    &:last-child{
+      border-bottom: none;
+      padding-bottom: 0;
+    }
+  }
+  &__input{
+    @extend %checkbox-hidden;
+    &:checked + .filter-color__checkbox{
+    background-image: url('../images/icons/checkmark.svg');
+    background-repeat: no-repeat;
+    background-position: center;
+    }
+ }
+ &__checkbox{
+   width: 16px;
+   height: 16px;
+   position: absolute;
+   margin-left: -16px;
+   margin-top: 7px;
+ }
+  &__checkbox--blue{
+     background-color: #00aeef;
+  }
+  &__checkbox--red{
+     background-color: #f52574;
+  }
+  &__checkbox--green{
+     background-color: #24d4ac;
+  }
+  &__checkbox--orange{
+     background-color: #ff7e00;
+  }
+  &__checkbox--black{
+     background-color: #000000;
+  }
+  &__checkbox--purple{
+     background-color: #923899;
+  }
+}
+.filter-size{
+&__label{
+  padding-left: 35px;
+  margin-bottom: 20px;
+display: flex;
+}
+&__input{
+    @extend %checkbox-hidden;
+    &:checked + .filter-size__checkbox{
+      background-image: url('../images/icons/check-size.svg');
+      border: none;
+      & + .filter-size__text{
+        color: $accent;
+      }
+    }
+}
+&__checkbox{
+width: 20px;
+height: 20px;
+border: 1px solid $defauld;
+position: absolute;
+margin-left: -35px;
+margin-top: 3px;
+border-radius: 50% ;
+}
+}
+.filter-category {
+  &__label{
+    margin-bottom: 15px;
+    display: block;
+    cursor: pointer;
+    
+    &:last-child{
+      margin-bottom: 0;
+    }
+  }
+    &__input{
+      @extend %checkbox-hidden;
+      &:checked + .filter-category__checkbox{
+background-color: $accent;
+color: #fff ;
+      }
+    }
+    &__checkbox{
+      background-color: #f6f6f6;
+      color: $title;
+      display: flex;
+      justify-content: space-between;
+      padding: 16px 20px;
+    }
+  }
+.filter-popular{
+  &__label{
+    display: inline-block;
+    margin-bottom: 20px;
+    margin-right: 8px;
+    cursor: pointer;
+padding: 10px 0;
+  }
+  &__input{
+    @extend %checkbox-hidden;
+    &:checked + .filter-popular__checkbox{
+      background-color: $accent;
+      border-color: $accent;
+      color: #fff;
+    }
+  }
+  &__checkbox{
+border: 1px solid $defauld;
+padding: 10px 20px;
+  }
+}
+.shop-content{
+  width: 100%;
+  &__filter{
+    border: 1px solid #ececec;
+    padding: 20px 25px 20px 30px;
+    margin-bottom: 40px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  &__filter-btn{
+    border: none;
+    padding: 0;
+    background-color: #fff;
+    margin-left: 15px;
+    line-height: 0;
+    cursor: pointer;
+    &.shop-content__filter-btn--active{
+      path{
+        fill: $accent;
+      }
+    }
+  }
+  &__filter-buttons{
+    display: flex;
+    align-items: center;
+
+  }
+}
+.jq-selectbox__select {
+  margin-left: 30px;
+    height: 32px;
+    padding: 0 30px 0 0;
+    border: none;
+    background: transparent;
+    box-shadow: none;
+   
+    color:$defauld;
+    text-shadow: none;
+    @extend %quicksand-500;
+    &:hover{
+background: transparent;
+    }
+}
+.jq-selectbox__trigger {
+    
+    border-left: none;
+}
+.jq-selectbox__trigger-arrow {
+    position: absolute;
+    top: 11px;
+    right: 12px;
+    width: 10px;
+    height: 5px;
+    border: none;
+    background-image: url('../images/icons/angle-down.svg');
+}
+.product-page{
+   padding: 120px 0 60px;
+   border-bottom: 1px solid #f0f0f0;
+  }
+
+.product-one{
+  &__inner{
+   display: flex;
+  }
+  &__slide{
+    width: 730px;
+    margin-right: 70px;
+  }
+  &__content{
+    width: 370px;
+  }
+  &__title{
+    margin-bottom: 20px;
+    color: $title;
+    font-size: 20px;
+  }
+  &__box{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 35px;
+  }
+  &__price{
+    display: flex;
+     font-size: 18px;
+  }
+  &__price-new{
+
+    color: $title;
+  }
+  &__price-old{
+   padding-left: 15px;
+   text-decoration: line-through;
+  }
+  &__item-star{
+    display: flex;
+    align-items: center;
+    span{
+      padding-left: 8px;
+      color: $title;
+      font-size: 22px;
+    
+    }
+  }
+  &__item-text{
+    margin-bottom: 40px;
+    span{
+      display: block;
+      color: $title;
+      @extend %roboto-400;
+      font-size: 18px;
+    }
+  }
+  &__item-btn {
+    @extend %btn;
+    border: none;
+    margin-left: 15px;
+    cursor: pointer;
+  }
+}
+.jq-number__field {
+width: 114px;
+border: 1px solid #f0f0f0;
+transform: translateY(1px);
+
+}
+.jq-number__field input {
+  width: 100% ;
+  height: 50px;
+  border: none;
+  outline: none;
+ 
+@extend  %quicksand-500;
+  color: $title;
+  text-align: center;
+}
+.jq-number {
+  padding: 0;
+  position: relative;
+}
+.jq-number__spin {
+  position: absolute;
+ width: 12px ;
+ height: 12px;
+// background-color: red;
+  cursor: pointer;
+  top: 50%;
+  transform: translateY(-50%);
+}
+.jq-number__spin.minus{
+left: 15px;
+
+}
+.jq-number__spin.plus {
+  right: 15px;
+
+}
+.jq-number__spin:after {
+  content: '';
+  position: absolute;
+  top: 6px;
+  left: 0;
+  background-color: $title;
+  width: 12px;
+  height: 1px;
+}
+.jq-number__spin.plus::before {
+  content: '';
+  position: absolute;
+  top: 0px;
+  left: 6px;
+  background-color: $title;
+  width: 1px;
+  height: 12px;
+}
+// .jq-number__spin.minus:after{
+//   left: -50px;
+//   top: -25px;
+
+// }
+
+
+.product-info{
+  &__list{
+margin-bottom: 30px;
+  }
+  &__item{
+margin-bottom: 5px;
+display: flex;
+  }
+  &__title{
+    min-width: 100px;
+    color: $title;
+  }
+  &__text{
+
+  }
+  
+  &__link{
+  path{
+    fill: $defauld;
+  }
+  & + .product-info__link{
+    margin-left: 15px;
+  }
+  &:hover{
+    path{
+      fill: $accent;
+    }
+  }
+  }
+}
+.product-slide{
+  display: flex;
+  .slick-vertical .slick-slide{
+    height: 140px;
+    margin-bottom: 30px;
+  }
+  &__thumb{
+    width: 140px;
+    margin-right: 30px;
+  }
+  &__thumb-item{
+    margin-bottom: 30px;
+    width: 140px;
+    height: 140px;
+    img{
+       width: 140px;
+       height: 140px;
+      object-fit: cover;    
+    }
+  }
+  &__big{
+    width: 560px;
+    img{
+      height: 650px;
+      width: 560px;
+      object-fit: cover;
+    }
+  }
+}
+.product-filter{
+  &__color{
+  margin-bottom: 35px;
+  label{
+margin-right: 10px;
+  }
+  }
+  &__color-input{
+    @extend %radio-hidden;
+    &:checked{
+      & + .product-filter__color-checkbox{
+        border-color: $accent;
+      }
+    }
+  }
+  &__color-checkbox{
+     width: 24px;
+     height: 24px;
+     cursor: pointer;
+     border: 1px solid #ccccce;
+     display: inline-block;
+     position: relative;
+     span{
+      content: '';
+      display: inline-block;
+      position: absolute;
+      width: 16px;
+      height: 16px;
+      top: 3px;
+      left: 3px; 
+     }
+  }
+  &__color-title,
+  &__size-title{
+    margin-bottom: 5px;   
+    font-size: 18px;
+    color: $title;
+    @extend %roboto-400;
+  }
+  &__size{
+    margin-bottom: 35px;
+    label{
+    margin-right: 10px;
+    display: inline-block
+    }
+  }
+  &__size-input{
+    @extend %radio-hidden;
+    &:checked{
+    & + .product-filter__size-checkbox{
+       border-color: $accent;
+    }
+
+    }
+  }
+  &__size-checkbox{
+    padding: 4px 12px;
+    border: 1px solid #ccccce;
+  }
+}
