--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1039,8 +1039,8 @@ background: transparent;
     background-image: url('../images/icons/angle-down.svg');
 }
 .product-page{
-   padding: 120px 0 60px;
-   border-bottom: 1px solid #f0f0f0;
+   padding: 120px 0 0;
+   
   }
 
 .product-one{
@@ -1281,5 +1281,181 @@ margin-right: 10px;
   &__size-checkbox{
     padding: 4px 12px;
     border: 1px solid #ccccce;
+    display: inline-block;
   }
+}
+.product-tabs{
+  padding-top: 110px;
+  &__top{
+    border-bottom: 1px solid #f0f0f0;
+    margin-bottom: 40px;
+    @extend %roboto-400;
+    font-size: 22px;
+  }
+  &__top-item{
+    margin-bottom: 10px;
+    display: inline-block; 
+    &+.product-tabs__top-item {
+    margin-left: 50px;
+    }
+  }
+  &__top-item--active{
+    color: $title;
+    position: relative;
+    &::before{
+      content: '';
+      position: absolute;
+      bottom: -11px;
+      left: 0px;
+      right: 0;
+      width: 100%;
+      height: 1px;
+      background-color: #fe3e57;
+    }
+  }
+  &__content-item{
+    display: none;
+    &.product-tabs__content-item--active{
+      display: block;
+    }
+  }
+}
+
+.comments{
+  margin-bottom: 40px;
+  display: flex;
+  &__img{
+    margin-right: 30px;
+    min-width: 71px;
+    height: 71px;
+    border-radius: 50%;
+    overflow: hidden;
+    object-fit: cover;
+  }
+  &__content-top{
+    display: flex;
+    margin-bottom: 10px;
+  }
+  &__content-name{
+    color: $title;
+    margin-right: 13px;
+    @extend %roboto-400;
+
+  }
+  &__content-date{
+    margin-left: 13px;
+    padding-left: 17px ;
+    border-left: 1px solid $defauld;
+  }
+  &__content-star{
+    margin-left: auto;
+    margin-right: 0;
+  }
+&__content-text{
+  margin-bottom: 10px;
+}
+&__content-reply{
+  display: inline-block;
+  padding-left: 25px;
+  position: relative;
+  &::before{
+    content: '';
+    position: absolute;
+    top: 7px;
+    left: 0;
+    width: 15px;
+    height: 13px;
+    background-image: url('../images/icons/replay.svg');
+  }
+}
+}
+
+.comment-form{
+  border-bottom: 1px solid #f0f0f0;
+  padding-bottom: 60px;
+  &__title{
+color: $title;
+font-size: 22px;
+@extend %roboto-400;
+padding-bottom: 10px;
+margin-bottom: 30px;
+position: relative;
+&::before{
+  content: '';
+  position: absolute;
+  height: 1px;
+  background-color: $accent;
+  bottom: 0;
+  left: 0;
+  width: 50px;
+}
+  }
+&__rating{
+  margin-bottom: 30px;
+}
+&__rating-title{
+  color: $title;
+  margin-right: 60px;
+}
+&__label{
+  margin-right: 25px;
+}
+&__input{
+  @extend %radio-hidden;
+  &:checked + .comment-form__radio {
+path{
+  fill: #ffc35b;
+}
+  }
+}
+&__radio{
+  cursor: pointer;
+  path{
+    fill: $defauld;
+  }
+}
+&__box-input{
+  margin-bottom: 30px;
+  display: flex;
+  justify-content: space-between;
+
+}
+&__text-input{
+  width: 570px;
+  display: inline-block;
+  height: 50px;
+  padding: 0 20px;
+  border: 1px solid #f0f0f0;
+}
+&__textarea{
+  border: 1px solid #f0f0f0;
+  padding: 15px 20px;
+  display: block;
+  height: 225px;
+  resize: none;
+  width: 100%;
+  margin-bottom: 40px;
+}
+&__btn{
+  border: none;
+  @extend %btn;
+  cursor: pointer;
+}
+}
+.related{
+  padding: 50px 0 120px;
+&__title{
+  margin-bottom: 50px;
+}
+&-items{
+  display: grid;
+  grid-template-columns:  repeat(4, 1fr);
+  grid-column-gap: 30px;
+  .product-item__img-box{
+    height: auto;
+  }
+  .product-item__title{
+    padding: 5px 0;
+  }
+}
 }
