--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -429,7 +429,90 @@ margin-top: 55px;
 .product-item{
   text-align: center;
   max-width: 370px;
+  &.product-item--list{
+    min-width: 100%;
+    display: flex;
+    text-align: left;
+    &:hover{
+      .product-item__link-box{
+transform: translateY(-179%);
+      }
+      
+    }
+  .product-item__img-box{
+height: 250px;
+min-width: 200px;
+margin-bottom: 0;
+img{
+  height: 250px;
+}
+  }
+  .product-item__text{
+margin-bottom: 25px;
+  }
+  .product-item__btn{
+    color: #fff;
+    padding: 11px 40px;
+    background-color: $title;
+    border: none;
+    cursor: pointer;
+    &:hover{
+      background-color: $accent;
+      box-shadow: 0px 7px 20px 0px rgba(255, 17, 48, 0.3);
+    }
+  }
+  .product-item__link-box{
+    background-color: transparent;
+    width: 115px;
+    box-shadow: none;
+    
+    bottom: 0;
+    // transform: translateY(-280%);
+    
+    .product-item__link{
+      width: 50px;
+      height: 50px;
+      background-color: #fff;
+      border-radius: 50%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+    .product-item__link--line {
+      display: none;
+    }
+  }
+  .product-item__content-box{
+    display: block;
+  }
+  .product-item__title{
+    order: -1;
+    width: 100%;
+    padding: 0;
+    margin-bottom: 10px;
+  }
   
+  .product-item__price{
+    order: -1;
+    margin-left: -12px;
+  }
+  .star{
+margin-left: 23px;
+  }
+  .product-item__box{
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .product-item__wrapper-box {
+    padding: 30px 40px;
+    border: 1px solid #ececec;
+    border-left: none;
+  }
+  }
+  
+    &__content-box{
+    display: none;
+  }
   &__img-box{
     position: relative;
     height: 370px;
@@ -610,7 +693,7 @@ right: 70px;
   &__item{
   max-width: 370px;
   border: 1px solid #ececec;
-  transition: all .3s;
+  transition: box-shadow .3s;
   &:hover{
     box-shadow: 20px 0px 60px 0px rgba(202, 202, 202, 0.35);
     border: none;
@@ -635,29 +718,10 @@ background-image: url('../images/icons/arrow-accent.svg');
 padding: 30px 40px;
   }
   &__item-info{
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 20px;
+  
   }
-  &__item-data,
-  &__item-author{
-padding-left: 30px;
-position: relative;
-&::before{
-  content: '';
-  position: absolute;
-  width: 20px;
-  height: 20px;
-  left: 0;
-  top: 4px;
-}
-}
-&__item-data::before{
-  background-image: url('../images/icons/time.svg');
-}
-&__item-author::before{
-   background-image: url('../images/icons/user-gray.svg');
-}
+  
+
 &__item-title{
 color: $title;
 @extend %roboto-400;
@@ -679,6 +743,33 @@ margin-bottom: 20px;
  right: -14px;
 }
   }
+
+  .blog-box{
+     display: flex;
+     justify-content: space-between;
+     position: relative;
+
+    &__author,
+    &__date{
+padding-left: 30px;
+position: relative;
+&::before {
+  content: '';
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  left: 0;
+  top: 4px;
+    }
+  }
+  &__data::before {
+    background-image: url('../images/icons/time.svg');
+  }
+
+  &__author::before {
+    background-image: url('../images/icons/user-gray.svg');
+  }
+}
 .modal{
   padding-top: 100px;
   max-width: 570px;
@@ -763,12 +854,11 @@ box-shadow: 0px 5px 25px 0px rgba(254, 62, 87, 0.35);
   @extend %roboto-400;
   }
 }
+
 .shop{
   padding: 120px 0 105px;
   &__inner{
     display: flex;
-    
-    
   }
   &__filters{
     width: 370px;
@@ -777,10 +867,9 @@ box-shadow: 0px 5px 25px 0px rgba(254, 62, 87, 0.35);
 }
 .filter{
   &__item{
-  padding: 35px 30px 40px;
-  border: 1px solid #ececec;
-  margin-bottom: 40px;
-  width: 370px;
+    padding: 35px 30px 40px;
+    border: 1px solid #ececec;
+    margin-bottom: 40px;
   }
   &__title{
     text-transform: uppercase;
@@ -788,7 +877,6 @@ box-shadow: 0px 5px 25px 0px rgba(254, 62, 87, 0.35);
     font-size: 22px;
     @extend %roboto-400;
     margin-bottom: 25px;
-
   }
 }
 .filter-search{
@@ -797,70 +885,72 @@ box-shadow: 0px 5px 25px 0px rgba(254, 62, 87, 0.35);
   }
   &__input{
     border: none;
-    background-color: $bg;
-    height: 50px;
+    background-color: $bg; 
     width: 260px;
+    height: 50px;
     padding: 0 5px 0 15px;
+
   }
   &__btn{
-     border: none;
-     background-color: $accent;
-     height: 50px;
-     width: 50px;
-     display: flex;
-     justify-content: center;
-     align-items: center;
-     cursor: pointer;
+    border: none;
+    background-color: $accent;
+    width: 50px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
   }
 }
+
 .filter-price{
   &__label{
-    padding-top: 30px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-  
-  }  
-  
+    padding-top: 30px;
+  }
+ 
   &__btn{
     @extend %btn;
     border: none;
-    cursor: pointer; 
+    cursor: pointer;
   }
 }
 .irs--flat .irs-line {
   top: 13px;
   height: 5px;
   background-color: #ececec;
-  border-radius: 0;
+  border-radius: 0  ;
 }
-
 .irs--flat .irs-handle {
-  top: 0px;
+  top: 0;
   width: 30px;
   height: 30px;
   background-color: #fff;
-  box-shadow: 0px 0px 13px 0px rgba(90, 90, 90, 0.2);
-
+    box-shadow: 0px 0px 13px 0px rgba(90, 90, 90, 0.2);
 }
 .irs--flat .irs-handle>i:first-child{
   display: none;
+}
+.irs--flat{
+  height: 30px;
 }
 .irs--flat .irs-bar {
   top: 13px;
   height: 5px;
   background-color: $accent;
 }
-
-.irs-from, .irs-to, .irs-single{
-display: none;
+.irs-from,
+.irs-to,
+.irs-single{
+  display: none;
 }
-.irs--flat .irs-min, .irs--flat .irs-max{
+.irs--flat .irs-min,
+.irs--flat .irs-max {
  display: none;
 }
-.irs--flat{
-  height: 30px;
-}
+
 .filter-color{
   &__label{
     padding-bottom: 20px;
@@ -868,133 +958,159 @@ display: none;
     display: flex;
     justify-content: space-between;
     & + .filter-color__label{
-      padding-top: 20px;
+padding-top: 20px;
     }
     &:last-child{
       border-bottom: none;
       padding-bottom: 0;
     }
   }
-  &__input{
-    @extend %checkbox-hidden;
-    &:checked + .filter-color__checkbox{
-    background-image: url('../images/icons/checkmark.svg');
-    background-repeat: no-repeat;
-    background-position: center;
-    }
- }
- &__checkbox{
-   width: 16px;
-   height: 16px;
-   position: absolute;
-   margin-left: -16px;
-   margin-top: 7px;
- }
+&__input{
+  @extend %checkbox-hidden;
+  //width: 1px;
+  // height: 1px;
+  // overflow: hidden;
+  // clip: rect(0 0 0 0);
+  position: absolute;
+  &:checked + .filter-color__checkbox{
+    background-image: url('../images/icons/check-on.svg');
+  }
+} 
+&__checkbox{
+  width: 16px;
+  height: 16px;
+  position: absolute;
+  margin-left: -16px;
+  margin-top: 7px;
+  svg{
+    fill: #fff;
+  }
+  
+}
   &__checkbox--blue{
-     background-color: #00aeef;
+ background-color: #00aeef;
   }
   &__checkbox--red{
-     background-color: #f52574;
+    background-color: #f52574;
   }
   &__checkbox--green{
-     background-color: #24d4ac;
+    background-color: #24d4ac;
   }
-  &__checkbox--orange{
-     background-color: #ff7e00;
+  &__checkbox--orange {
+    background-color: #ff7e00;
   }
   &__checkbox--black{
-     background-color: #000000;
-  }
+    background-color: #000000;
+    }
   &__checkbox--purple{
-     background-color: #923899;
+    background-color: #923899;
   }
 }
+
 .filter-size{
 &__label{
   padding-left: 35px;
   margin-bottom: 20px;
-display: flex;
+  display: block;
 }
-&__input{
-    @extend %checkbox-hidden;
-    &:checked + .filter-size__checkbox{
-      background-image: url('../images/icons/check-size.svg');
-      border: none;
-      & + .filter-size__text{
-        color: $accent;
-      }
-    }
+
+ &__input{
+   @extend %checkbox-hidden;
+   &:checked + .filter-size__checkbox{
+     background-image: url('../images/icons/check-size.svg ');
+     border: none;
+     & + .filter-size__text{
+       color: $accent;
+     }
+  }
+ }
+ &__checkbox{
+   width: 20px;
+   height: 20px;
+   border: 1px solid $defauld;
+   position: absolute;
+   margin-left: -35px;
+   margin-top: 3px;
+   border-radius: 50%;
+ }
 }
-&__checkbox{
-width: 20px;
-height: 20px;
-border: 1px solid $defauld;
-position: absolute;
-margin-left: -35px;
-margin-top: 3px;
-border-radius: 50% ;
-}
-}
-.filter-category {
+
+.filter-category{
   &__label{
     margin-bottom: 15px;
     display: block;
     cursor: pointer;
-    
+    margin-bottom: 15px;
     &:last-child{
       margin-bottom: 0;
     }
   }
-    &__input{
-      @extend %checkbox-hidden;
-      &:checked + .filter-category__checkbox{
-background-color: $accent;
-color: #fff ;
-      }
-    }
-    &__checkbox{
-      background-color: #f6f6f6;
-      color: $title;
-      display: flex;
-      justify-content: space-between;
-      padding: 16px 20px;
+  &__input{
+    @extend %checkbox-hidden;
+    &:checked + .filter-category__checkbox{
+       background-color: $accent;
+       color: #fff;
     }
   }
+  &__checkbox{
+    background-color: #f6f6f6;
+    color: $title;
+    display: flex;
+    justify-content: space-between;
+    padding: 16px 20px;
+  }
+}
+
 .filter-popular{
   &__label{
     display: inline-block;
     margin-bottom: 20px;
     margin-right: 8px;
     cursor: pointer;
-padding: 10px 0;
+    padding: 10px 0;
   }
   &__input{
     @extend %checkbox-hidden;
-    &:checked + .filter-popular__checkbox{
-      background-color: $accent;
-      border-color: $accent;
-      color: #fff;
+    &:checked+.filter-popular__checkbox{
+    background-color: $accent;
+    border-color: $accent ;
+    color: #fff;
     }
   }
   &__checkbox{
-border: 1px solid $defauld;
+border: 1px solid $defauld ;
 padding: 10px 20px;
   }
 }
+
 .shop-content{
   width: 100%;
+  &__inner{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    border-bottom: 1px solid #ececec;
+    .product-item{
+      margin-bottom: 40px;
+    }
+  }
   &__filter{
     border: 1px solid #ececec;
     padding: 20px 25px 20px 30px;
     margin-bottom: 40px;
     display: flex;
+    align-items: center;
     justify-content: space-between;
+  }
+  &__filter-buttons{
+    display: flex;
     align-items: center;
   }
   &__filter-btn{
-    border: none;
+    outline: none;
     padding: 0;
-    background-color: #fff;
+    border: none;
+    background-color: transparent ;
     margin-left: 15px;
     line-height: 0;
     cursor: pointer;
@@ -1004,44 +1120,78 @@ padding: 10px 20px;
       }
     }
   }
-  &__filter-buttons{
-    display: flex;
-    align-items: center;
-
-  }
 }
 .jq-selectbox__select {
   margin-left: 30px;
-    height: 32px;
-    padding: 0 30px 0 0;
-    border: none;
-    background: transparent;
-    box-shadow: none;
-   
-    color:$defauld;
-    text-shadow: none;
-    @extend %quicksand-500;
-    &:hover{
-background: transparent;
-    }
+  height: 32px;
+  padding: 0 30px 0 0;
+  border: none; 
+  background: transparent;
+  box-shadow: none;
+@extend %quicksand-500;
+  color: $defauld;
+  text-shadow: none;
+  &:hover{
+    background: transparent ;
+  }
 }
-.jq-selectbox__trigger {
-    
-    border-left: none;
+
+.jq-selectbox__trigger{
+  border-left: none;
 }
 .jq-selectbox__trigger-arrow {
-    position: absolute;
-    top: 11px;
-    right: 12px;
-    width: 10px;
-    height: 5px;
-    border: none;
-    background-image: url('../images/icons/angle-down.svg');
+  position: absolute;
+  top: 12px;
+  right: 12px;
+  width: 10px;
+  height: 5px;
+  border: none;
+  border-top: 5px solid #999;
+  border-right: 5px solid transparent;
+  border-left: 5px solid transparent;
+  background-image: url('../images/icons/angle-down.svg');
 }
-.product-page{
-   padding: 120px 0 0;
-   
+
+.pagination{
+  display: flex;
+  justify-content: center;
+  padding: 30px 0;
+  .pagination__list {
+    display: flex;
+    padding: 0 35px;
   }
+  &__item{
+    padding: 0 15px;
+  }
+  &__link--active{
+    color: $accent;
+  }
+  &__arrows{
+    text-transform: uppercase;
+    position: relative;
+    &::before{
+      content: '';
+      position: absolute;
+      width: 5px;
+      height: 10px;
+      top: 8px;
+    }
+  }
+  &__prev{
+padding-left: 15px;
+&::before{
+  background-image: url('../images/icons/angle_left.svg');
+  left: 0;
+}
+  }
+  &__next{
+padding-right: 15px;
+&::before{
+  background-image: url('../images/icons/angle_right.svg');
+  right: 0;
+}
+  }
+}
 
 .product-one{
   &__inner{
@@ -1459,4 +1609,64 @@ path{
     padding: 5px 0;
   }
 }
+}
+.blog-page{
+  padding: 120px 0 60px;
+  &__inner{
+    display: flex;
+    justify-content: space-between;
+  }
+  &__content{
+    width: 770px;
+    margin-right: 30px;
+  }
+  &__aside{
+    width: 370px;
+  }
+  &__item{
+    margin-bottom: 60px;
+    &.blog-page__item--no-image{
+      border-top: 1px solid #ececec;
+      box-shadow: 0px 20px 60px 0px rgba(202, 202, 202, 0.35);
+    }
+  }
+
+  
+
+  &__link{
+    display: block;
+    color: inherit;
+    font-family: inherit ;
+  }
+  &__img{
+    max-width: 770px;
+    height: 450px;
+    object-fit: cover;
+    display: block;
+  }
+  &__item-box{
+    border: 1px solid #ececec;
+    border-top: none;
+    padding: 40px;
+  }
+  &__item-title{
+    color: #29282d;
+    font-size: 22px;
+    @extend %roboto-700; 
+    margin-bottom: 20px;
+    line-height: 32px;
+    transition: color .3s;
+    &:hover{
+      color: $accent;
+    }
+  }
+  &__item-text{
+    margin-top: 30px;
+  }
+  .blog-box{
+    justify-content: start;
+    &__author{
+margin-right: 30px;
+    }
+  }
 }
